2014-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c: Add progress indication support to WebP writer.

	* magick/command.c (VersionCommand): WebP support is included in
	-version output.

	* coders/webp.c: WebP coder identifies library version and header
	ABI versions. Improve WebP error reporting.

2014-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Allow specifying the TIFF image
	software tag.  In the special case that the string length is zero
	(e.g. -set software '') then the tag is skipped entirely.  This is
	to support SourceForge feature request #37 "Option to prevent
	addition of Exif Software tag" opened by Jean-Louis Grall.  Please
	note that this tag is not an EXIF tag.

	* magick/command.c: composite, convert, display, mogrify, and
	import now support +set to remove an existing image attribute.

2014-03-16  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Don't block threads when PNG_SETJMP_SUPPORTED is
	not enabled.

	* coders/png.c: Changed prefix of macros defined in coders/png.c
	from PNG_ to GMPNG_.  PNG_ is reserved for macros defined by
	libpng.

2014-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: Don't use setvbuf() to set stdio block size if
	filesystem block size is zero (e.g. MAGICK_IOBUF_SIZE=0)

2014-03-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{rwblob.tap, rwfile.tap}: Added tests for WEBP.

	* tests/{rwblob.c, rwfile.c}: Add lossy hint for WEBP.

	* coders/webp.c (WriteWEBPImage): Fix inverted return status.
	Added a tiny bit of logging.

2014-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ttf: Updated FreeType to release 2.5.3 of March 6, 2014.
	Provides security fixes for CVE-2014-2240.

	* jpeg: Update to libjpeg 9a of 19-Jan-2014.

	* png: Update to Libpng 1.6.10 - March 6, 2014.

2014-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
