@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140405"
-#define public MagickPackageReleaseDate "snapshot-20140405"
+#define public MagickPackageVersionAddendum ".020140409"
+#define public MagickPackageReleaseDate "snapshot-20140409"
