@@ -1,3 +1,8 @@
+2014-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/command.c (BenchmarkImageCommand): Add a CSV title line
+	and quoting to benchmark -rawcsv output.
+
 2014-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/webp.c: Add progress indication support to WebP writer.
